[project]
name = "ComfyUI-AlwaysOnline"
description = "🚬This nodes includes video automatic watermarking, multi line text merging, text replacement, GLM4V local image to text inference and text to text inference, and JSON value retrieval based on keys 😊"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/alwaysOnlineYou/ComfyUI-AlwaysOnline"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "always89"
DisplayName = "ComfyUI-AlwaysOnline"
Icon = ""
includes = []
